# sitecheck

./: .dockerignore  .env.sample  .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  a2a_server.py  bash_mcp.py  config.py  docker-compose.yml  integration_test.py  integration_test_ma_deal.py  mcp_server.py  pyproject.toml  subagent.py
a2a_agent/: .env.sample  Dockerfile  agent.py  agent_card.json  pyproject.toml  server.py  settings.py  tools.py
a2a_agent/a2a_agent/: agent.py  agent_card.json  server.py  settings.py  tools.py
a2a_agent/a2a_agent/skills/: due_diligence.md
data/: sample_contract.txt  target_locations.csv
mcp_server/: .env.sample  Dockerfile  pyproject.toml  server.py  utils.py  vision.py
mcp_server/mcp_server/: server.py  settings.py  utils.py  vision.py
