[project]
name = "sitecheck-pipeline"
version = "0.1.0"
description = "Site Check Pipeline Workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
workspace = { members = ["a2a_agent", "mcp_server"] }
managed = true

[dependency-groups]
dev = [
    "ruff==0.15.9",
    "ty==0.0.28",
]
