[project]
name = "a2a-sitecheck"
version = "0.1.0"
description = "A2A Agent for Site Check"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.25",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "mcp>=0.9.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "openai>=2.30.0",
    "pandas>=2.2.3",
    "duckdb>=1.1.3",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "a2a_agent"
module-root = "."
include = ["a2a_agent/*.py", "a2a_agent/agent_card.json", "a2a_agent/skills/*.md"]
