[project]
name = "mcp-sitecheck"
version = "0.1.0"
description = "MCP Server for Site Check"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "aiohttp>=3.13.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "tqdm>=4.67.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "openai>=2.30.0",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
